Clicking on an email address links to the email form

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -20,11 +20,11 @@
         <div class="col l3 s12">
           <h5 class="white-text">email</h5>
           <ul>
-            <li><a class="white-text" href="#!">mgarseneau@mta.ca</a></li>
-            <li><a class="white-text" href="#!">jsfirsoff@mta.ca</a></li>
-            <li><a class="white-text" href="#!">sdewan@mta.ca</a></li>
-            <li><a class="white-text" href="#!">jacookson@mta.ca</a></li>
-            <li><a class="white-text" href="#!">ilee@mta.ca</a></li>
+            <li><a class="white-text" href="mailto:mgarseneau@mta.ca">mgarseneau@mta.ca</a></li>
+            <li><a class="white-text" href="mailto:jsfirsoff@mta.ca">jsfirsoff@mta.ca</a></li>
+            <li><a class="white-text" href="mailto:sdewan@mta.ca">sdewan@mta.ca</a></li>
+            <li><a class="white-text" href="mailto:jacookson@mta.ca">jacookson@mta.ca</a></li>
+            <li><a class="white-text" href="mailto:ilee@mta.ca">ilee@mta.ca</a></li>
           </ul>
         </div>
       </div>
