drop down trip menu
-added drop down trips menu
-enabled menus to drop down upon hover

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -95,8 +95,18 @@
   font-size: 35px;
 }
 
+.dropdown-content {
+    max-height: 350px;
+    max-width: 325px;
+    overflow-x: hidden;
+}
+
 #user_sett {
    font-size: 50px;
+}
+
+#addicon {
+
 }
 
 .errortext {
