--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,7 +3,7 @@
 <head th:replace="import :: head">...</head>
 
 <body>
-    <header th:replace="header :: header">...</header>
+    <header th:replace="headerLogin :: header">...</header>
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
