--- a/src/main/resources/templates/edit-accommodation.html
+++ b/src/main/resources/templates/edit-accommodation.html
@@ -100,7 +100,7 @@
                         </div>
                     </div>
 
-
+					<input type="hidden" th:field="*{id}"/>
                     <div class="row">
                         <div class="col s12">
                             <div class="input-field inline">
