--- a/src/main/resources/templates/edit-itinerary.html
+++ b/src/main/resources/templates/edit-itinerary.html
@@ -35,7 +35,7 @@
                         </div>
                     </div>
 
-
+					<input type="hidden" th:field="*{id}"/>
 
                     <div class="row">
                         <div class="col s12">
