--- a/src/main/resources/templates/edit-reservation.html
+++ b/src/main/resources/templates/edit-reservation.html
@@ -99,6 +99,7 @@
                         </div>
                     </div>
 
+					<input type="hidden" th:field="*{id}"/>
 
                     <div class="row">
                         <div class="col s12">
