--- a/src/main/resources/templates/edit-accommodation.html
+++ b/src/main/resources/templates/edit-accommodation.html
@@ -3,8 +3,9 @@
 
 <head th:replace="import :: head">...</head>
 
+
 <body>
-    <header th:replace="header :: header">...</header>
+ <header th:replace="header :: header">...</header>
     <div class="section no-pad-bot" id="index-banner">
         <div class="container">
             <br><br>
@@ -28,12 +29,12 @@
                     </div>
                     <div class="row">
                     <div class="input-field col s4">
-                            <input id="checkIn" type="text" class="validate datepicker" th:field="*{checkIn}">
+                            <input id="checkIn" th:required="required" type="text" class="validate datepicker" th:field="*{checkIn}">
                             <label for="checkIn">Check-in Date</label>
                             <span class="errortext" th:if="${#fields.hasErrors('checkIn')}" th:errors="*{checkIn}"></span>
                         </div>
                         <div class="input-field col s4">
-                            <input id="checkOut" type="text" class="validate datepicker" th:field="*{checkOut}">
+                            <input id="checkOut" th:required="required" type="text" class="validate datepicker" th:field="*{checkOut}">
                             <label for="checkOut">Check-out Date</label>
                             <span class="errortext" th:if="${#fields.hasErrors('checkOut')}" th:errors="*{checkOut}"></span>
                         </div>
@@ -77,26 +78,25 @@
                             <span class="errortext" th:if="${#fields.hasErrors('address.province')}" th:errors="*{address.province}"></span>
                         </div>
                     </div>
-                    <div class="row">
                     <div class="input-field col s4">
                             <input id="country" type="text" class="validate" th:field="*{address.country}">
                             <label for="country">Country</label>
-                            <span class="errortext" th:if="${#fields.hasErrors('address.country')}" th:errors="*{address.country}"></span>
+                            <span th:if="${#fields.hasErrors('address.country')}" th:errors="*{address.country}"></span>
                         </div>
                         <div class="input-field col s4">
                             <input id="code" type="text" class="validate" th:field="*{address.code}">
                             <label for="code">Postal Code</label>
-                            <span class="errortext" th:if="${#fields.hasErrors('address.code')}" th:errors="*{address.code}"></span>
+                            <span th:if="${#fields.hasErrors('address.code')}" th:errors="*{address.code}"></span>
                         </div>
                         <div class="input-field col s2">
                             <input id="latitude" type="number" step="0.000001" class="validate" th:field="*{address.latitude}">
                             <label for="latitude">Latitude</label>
-                            <span class="errortext" th:if="${#fields.hasErrors('address.latitude')}" th:errors="*{address.latitude}"></span>
+                            <span th:if="${#fields.hasErrors('address.latitude')}" th:errors="*{address.latitude}"></span>
                         </div>
                         <div class="input-field col s2">
                             <input id="longitude" type="number" step="0.000001" class="validate" th:field="*{address.longitude}">
                             <label for="longitude">Longitude</label>
-                            <span class="errortext" th:if="${#fields.hasErrors('address.longitude')}" th:errors="*{address.longitude}"></span>
+                            <span th:if="${#fields.hasErrors('address.longitude')}" th:errors="*{address.longitude}"></span>
                         </div>
                     </div>
 
