--- a/src/main/resources/templates/edit-reservation.html
+++ b/src/main/resources/templates/edit-reservation.html
@@ -25,7 +25,7 @@
                             <span class="errortext" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
                         </div>
                         <div class="input-field col s6">
-                            <input id="date" type="text" class="validate datepicker" th:field="*{date}">
+                            <input id="date" th:required="required" type="text" class="validate datepicker" th:field="*{date}">
                             <label for="date">Date</label>
                             <span class="errortext" th:if="${#fields.hasErrors('date')}" th:errors="*{date}"></span>
                         </div>
