--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -31,8 +31,7 @@
 			      <a th:href="@{/trip/} + ${trip.id}"> 
 			      <span th:text="${trip.title}"></span>
 			      <p class="" th:text="${trip.description}"/>
-			      
-			      <h6 th:text="${#dates.format(trip.start, 'MMM dd, yyyy')} +' - '+  ${#dates.format(trip.end, 'MMM dd, yyyy')}" class="header col s6 dark"></h6></h6>
+			      <p th:text="${#dates.format(trip.start, 'MMM dd, yyyy')} +' - '+  ${#dates.format(trip.end, 'MMM dd, yyyy')}"/>
 			      
 			     
 			      
