--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
     <center>
       <img class="responsive-img" style="width: 250px;" src="" />
 
-      <h5 class="indigo-text">Please, login into your account</h5>
+      <h5 class="indigo-text">Please, login to your account</h5>
 
       <div class="container">
         <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
