--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -96,7 +96,7 @@
                                 <p th:text="${accommodation.notes}"></p>
                                 check-in: <span th:text="${#dates.format(accommodation.checkIn, 'MMM dd, yyyy')}" />&nbsp;
                                 <br>check-out: <span th:text="${#dates.format(accommodation.checkOut, 'MMM dd, yyyy')}" /><br>
-                                <h6>$ <span th:if="${accommodation.price != null}" th:text="${#numbers.formatDecimal(accommodation.price, 0, 'COMMA', 2, 'POINT')}">10.00</span></h6>
+                                <h6><span th:if="${accommodation.price != null}" th:text="'$'+${#numbers.formatDecimal(accommodation.price, 0, 'COMMA', 2, 'POINT')}">10.00</span></h6>
                                 
                                 
                                 <br>
