more printing fixes

--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -153,7 +153,7 @@
                                 <p th:text="${reservation.notes}"></p>
                                 Confirmation: <span th:text="${reservation.confirmation}"></span>
                                	<h6 th:text=" ${reservation.reserveTime}"></h6>
-                                <h6 th:if="${reservation.price != null}" th:text="@{'$' +  ${reservation.price}}"></h6>
+                               	<h6>$ <span th:if="${reservation.price != null}" th:text="${#numbers.formatDecimal(reservation.price, 0, 'COMMA', 2, 'POINT')}">10.00</span></h6>
                                 <address th:if="${reservation.address != null}">
                                     <span th:text="${reservation.address.civicNumber}" />&nbsp;<span th:text="${reservation.address.street}" /><br>
                                     <span th:text="${reservation.address.city}"/>&nbsp;<span th:text="${reservation.address.province}" />&nbsp;<span th:text="${reservation.address.country}" /><br>
