--- a/src/main/resources/templates/print-trip.html
+++ b/src/main/resources/templates/print-trip.html
@@ -12,7 +12,7 @@
     <td>
     <span th:text="'Check-In: ' + ${#dates.format(accommodation.checkIn, 'MMM dd, yyyy')}"></span><br/>
     <span th:text="'Check-Out: ' + ${#dates.format(accommodation.checkOut, 'MMM dd, yyyy')}"></span><br/>
-    <span th:if="${accommodation.price != null}" th:text="'Price: $' + ${accommodation.price}"></span><br/>
+    <span <span th:if="${accommodation.price != null}" th:text="'$'+${#numbers.formatDecimal(accommodation.price, 0, 'COMMA', 2, 'POINT')}"></span><br/>
     <span th:if="${!accommodation.notes.isEmpty()}" th:text="'Notes: ' + ${accommodation.notes}"></span><br/>
     <br>
      <address>
@@ -48,8 +48,9 @@
     <td>
     <span th:text="'Date: ' + ${#dates.format(reservation.date, 'MMM dd, yyyy')}"></span><br/>
     <span th:text="'Confirmation: ' + ${reservation.confirmation}"></span><br/>
-    <h6 th:if="${reservation.price != null}" th:text="@{'Price: $' +  ${reservation.price}}"></h6><br/>
-    <span th:if="${!reservation.notes.isEmpty()}" th:text="'Notes: ' + ${reservation.notes}"></span><br/>
+    <span th:if="${reservation.price != null}" th:text="${#numbers.formatDecimal(reservation.price, 0, 'COMMA', 2, 'POINT')}">10.00</span></br>
+    <span th:if="${!reservation.notes.isEmpty()}" th:text="'Notes: ' + ${reservation.notes}"><br/></span>
+   
     <br>
      <address>
                                     <span th:text="${reservation.address.civicNumber}" />&nbsp;<span th:text="${reservation.address.street}" /><br>
