--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -33,7 +33,7 @@
                 
             </div>
             <div class="row center">
-            	<h6 "" class="header col s12 m6 l6 light"></h6>
+            	<h6 "" class="header col s4 light"></h6>
             	<h6 th:text="${#dates.format(trip.start, 'MMM dd, yyyy')+ ' - ' + #dates.format(trip.end, 'MMM dd, yyyy')}" class="header col s4 dark"></h6>
      
                 <h6 th:text="${trip.description}" class="header col s12 light"></h6>
@@ -44,7 +44,7 @@
 
             <div class="row">
 
-                <div class="col s12 m6 l6">
+                <div class="col s12 m8 l6">
                     <h4 class="header">
                         <span data-target="modal1" class="btn-floating red"><i class="material-icons">perm_contact_calendar</i></span>
                         Itineraries
@@ -71,7 +71,7 @@
                     </ul>
                 </div>
 
-                <div class="col s12 m6 l6">
+                <div class="col s12 m8 l6">
                     <h4 class="header">
                         <span data-target="modal1" class="btn-floating green"><i class="material-icons">hotel</i></span>
                         Accommodations
@@ -96,7 +96,7 @@
                                 <p th:text="${accommodation.notes}"></p>
                                 check-in: <span th:text="${#dates.format(accommodation.checkIn, 'MMM dd, yyyy')}" />&nbsp;
                                 <br>check-out: <span th:text="${#dates.format(accommodation.checkOut, 'MMM dd, yyyy')}" /><br>
-                                <h6><span th:if="${accommodation.price != null}" th:text="'$'+${#numbers.formatDecimal(accommodation.price, 0, 'COMMA', 2, 'POINT')}">10.00</span></h6>
+                                <h6>$ <span th:if="${accommodation.price != null}" th:text="${#numbers.formatDecimal(accommodation.price, 0, 'COMMA', 2, 'POINT')}">10.00</span></h6>
                                 
                                 
                                 <br>
@@ -153,7 +153,7 @@
                                 <p th:text="${reservation.notes}"></p>
                                 Confirmation: <span th:text="${reservation.confirmation}"></span>
                                	<h6 th:text=" ${reservation.reserveTime}"></h6>
-                               	<h6>$ <span th:if="${reservation.price != null}" th:text="${#numbers.formatDecimal(reservation.price, 0, 'COMMA', 2, 'POINT')}">10.00</span></h6>
+                                <h6 th:if="${reservation.price != null}" th:text="@{'$' +  ${reservation.price}}"></h6>
                                 <address th:if="${reservation.address != null}">
                                     <span th:text="${reservation.address.civicNumber}" />&nbsp;<span th:text="${reservation.address.street}" /><br>
                                     <span th:text="${reservation.address.city}"/>&nbsp;<span th:text="${reservation.address.province}" />&nbsp;<span th:text="${reservation.address.country}" /><br>
@@ -176,7 +176,7 @@
                                 </address>
                             </div>
                         </li>
-                    </ul>
+                    </ul> 
                 </div>
 
             </div>
