controller refactor, some fixes
-split up controller
-kept mainController for now incase of bugs, but it is unactivated
-removed "confirmation:" from showing if none
-fixed issue where going back from print would have unexpected redirects

--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -151,7 +151,7 @@
                             </div>
                             <div class="collapsible-body">
                                 <p th:text="${reservation.notes}"></p>
-                                Confirmation: <span th:text="${reservation.confirmation}"></span>
+                                <span th:if="${!reservation.confirmation.isEmpty()}" th:text="'Confirmation: '+${reservation.confirmation}"></span>
                                	<h6 th:text=" ${reservation.reserveTime}"></h6>
                                 <h6 th:if="${reservation.price != null}" th:text="@{'$' +  ${reservation.price}}"></h6>
                                 <address th:if="${reservation.address != null}">
