--- a/src/main/resources/templates/print-trip.html
+++ b/src/main/resources/templates/print-trip.html
@@ -47,7 +47,7 @@
     <h6 th:text="${reservation.title}"></h6>
     <td>
     <span th:text="'Date: ' + ${#dates.format(reservation.date, 'MMM dd, yyyy')}"></span><br/>
-    <span th:text="'Confirmation: ' + ${reservation.confirmation}"></span><br/>
+    <span th:if="${!reservation.confirmation.isEmpty()}" th:text="'Confirmation: ' + ${reservation.confirmation}"></span><br/>
     <span th:if="${reservation.price != null}" th:text="${#numbers.formatDecimal(reservation.price, 0, 'COMMA', 2, 'POINT')}">10.00</span></br>
     <span th:if="${!reservation.notes.isEmpty()}" th:text="'Notes: ' + ${reservation.notes}"><br/></span>
    
