--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -46,10 +46,12 @@
 
                 <div class="col s12 m8 l6">
                     <h4 class="header">
+                    
                         <span data-target="modal1" class="btn-floating red"><i class="material-icons">perm_contact_calendar</i></span>
-                        Itineraries
+                        Itineraries &nbsp
+                      <span id="addbutton">
                         <a class="btn-floating btn-medium waves-effect waves-light red right tooltipped" data-position="bottom" data-tooltip="Add Itinerary" th:href="@{'/trip/' + ${trip.id} + '/itinerary/add' }"><i
-                                class="material-icons">add</i></a>
+                                class="material-icons">add</i></a> </span>
                     </h4>
                     <br>
                     <ul class="collapsible">
@@ -74,7 +76,7 @@
                 <div class="col s12 m8 l6">
                     <h4 class="header">
                         <span data-target="modal1" class="btn-floating green"><i class="material-icons">hotel</i></span>
-                        Accommodations
+                        Accommodations &nbsp
                         <a class="btn-floating btn-medium waves-effect waves-light red right tooltipped" data-position="bottom" data-tooltip="Add Accommodation" th:href="@{'/trip/' + ${trip.id} + '/accommodation/add' }"><i
                                 class="material-icons">add</i></a>
                     </h4>
@@ -132,7 +134,7 @@
 
                     <h4 class="header">
                         <span data-target="modal1" class="btn-floating blue"><i class="material-icons">whatshot</i></span>
-                        Reservations
+                        Reservations &nbsp
                         <a class="btn-floating btn-medium waves-effect waves-light red right tooltipped" data-position="bottom" data-tooltip="Add Reservation" th:href="@{'/trip/' + ${trip.id} + '/reservation/add' }"><i
                                 class="material-icons">add</i></a>
                     </h4>
