--- a/src/main/resources/templates/edit-accommodation.html
+++ b/src/main/resources/templates/edit-accommodation.html
@@ -22,7 +22,7 @@
                     method="post">
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="title" type="text" class="validate" th:field="*{title}">
+                            <input id="title" type="text" class="validate" th:required="required" th:field="*{title}">
                             <label for="title">Title</label>
                             <span class="errortext" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
                         </div>
