--- a/src/main/resources/templates/edit-reservation.html
+++ b/src/main/resources/templates/edit-reservation.html
@@ -21,7 +21,7 @@
                     method="post">
                     <div class="row">
                         <div class="input-field col s6">
-                            <input id="title" type="text" class="validate" th:field="*{title}">
+                            <input id="title" type="text" class="validate" th:required="required" th:field="*{title}">
                             <label for="title">Title</label>
                             <span class="errortext" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
                         </div>
