--- a/src/main/resources/templates/add-accommodation.html
+++ b/src/main/resources/templates/add-accommodation.html
@@ -17,10 +17,10 @@
 
             <br><br>
             <div class="row">
-                <form class="col s12" action="#" th:action="@{/trip/} + ${trip.id} + @{/accommodation/add}" th:object="${accommodation}"
+                <form class="col s12 m6 l6" action="#" th:action="@{/trip/} + ${trip.id} + @{/accommodation/add}" th:object="${accommodation}"
                     method="post">
                     <div class="row">
-                        <div class="input-field col s12">
+                        <div class="input-field col s12 m12 l12">
                             <input id="title" type="text" class="validate" th:required="required" th:field="*{title}">
                             <label for="title">Title</label>
                             <span class="errortext" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
@@ -28,19 +28,19 @@
                         
                     </div>
                     <div class="row">
-                    <div class="input-field col s4">
+                    <div class="input-field col s12 m6 l4">
                             <input id="checkIn" th:required="required" type="text" class="validate datepicker" th:field="*{checkIn}">
                             <label for="checkIn">Check-in Date</label>
                             <span class="errortext" th:if="${#fields.hasErrors('checkIn')}" th:errors="*{checkIn}"></span>
                         </div>
                         
-                        <div class="input-field col s4">
+                        <div class="input-field col s12 m6 l4">
                             <input id="checkOut" th:required="required" type="text" class="validate datepicker" th:field="*{checkOut}">
                             <label for="checkOut">Check-out Date</label>
                             <span class="errortext" th:if="${#fields.hasErrors('checkOut')}" th:errors="*{checkOut}"></span>
                         </div>
                         
-                        <div class="input-field col s4">
+                        <div class="input-field col s12 m6 l4">
                             <input id="price" type="number" step="0.01" min="0" accommodation.price=parseFloat(accommodation.price).toFixed(2) class="validate" th:field="*{price}">
                             <label for="price">Price</label>
                             <span class="errortext" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="input-field col s12">
+                        <div class="input-field col s12 m12 l12">
                             <textarea th:field="*{notes}" id="notes" class="materialize-textarea"></textarea>
                             <label for="notes">Notes</label>
                             <span class="errortext" th:if="${#fields.hasErrors('notes')}" th:errors="*{notes}"></span>
@@ -59,22 +59,22 @@
                     <!-- Address -->
                     <h4>Address</h4>
                     <div class="row">
-                        <div class="input-field col s2">
+                        <div class="input-field col s6 m6 l3">
                             <input id="civicNumber" type="number" min="0" class="validate" th:field="*{address.civicNumber}">
                             <label for="civicNumber">Civic Number</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.civicNumber')}" th:errors="*{address.civicNumber}"></span>
                         </div>
-                        <div class="input-field col s4">
+                        <div class="input-field col s6 m6 l3">
                             <input id="street" type="text" class="validate" th:field="*{address.street}">
                             <label for="street">Street</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.street')}" th:errors="*{address.street}"></span>
                         </div>
-                        <div class="input-field col s4">
+                        <div class="input-field col s6 m6 l3">
                             <input id="city" type="text" class="validate" th:field="*{address.city}">
                             <label for="city">City</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.city')}" th:errors="*{address.city}"></span>
                         </div>
-                        <div class="input-field col s2">
+                        <div class="input-field col s6 m6 l3">
                             <input id="province" type="text" class="validate" th:field="*{address.province}">
                             <label for="province">Province</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.province')}" th:errors="*{address.province}"></span>
@@ -82,22 +82,22 @@
                     </div>
                     <div class="row">
 
-                      <div class="input-field col s4">
+                      <div class="input-field col s6 m6 l3">
                             <input id="country" type="text" class="validate" th:field="*{address.country}">
                             <label for="country">Country</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.country')}" th:errors="*{address.country}"></span>
                         </div>
-                        <div class="input-field col s4">
+                        <div class="input-field col s6 m6 l3">
                             <input id="code" type="text" class="validate" th:field="*{address.code}">
                             <label for="code">Postal Code</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.code')}" th:errors="*{address.code}"></span>
                         </div>
-                        <div class="input-field col s2">
+                        <div class="input-field col s6 m6 l3">
                             <input id="latitude" type="number" step="0.000001" class="validate" th:field="*{address.latitude}">
                             <label for="latitude">Latitude</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.latitude')}" th:errors="*{address.latitude}"></span>
                         </div>
-                        <div class="input-field col s2">
+                        <div class="input-field col s6 m6 l3">
                             <input id="longitude" type="number" step="0.000001" class="validate" th:field="*{address.longitude}">
                             <label for="longitude">Longitude</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.longitude')}" th:errors="*{address.longitude}"></span>
@@ -106,7 +106,7 @@
 
 
                     <div class="row">
-                        <div class="col s12">
+                        <div class="col s12 m12 l12">
                             <div class="input-field inline">
                                 <button class="btn waves-effect waves-light" type="submit" name="action">Add
                                     Accommodation
