--- a/src/main/resources/templates/edit-itinerary.html
+++ b/src/main/resources/templates/edit-itinerary.html
@@ -17,11 +17,11 @@
 
             <br><br>
             <div class="row">
-                <form class="col s12" action="#" th:action="@{/trip/} + ${trip.id} + @{/itinerary/update/} + ${itinerary.id}" th:object="${itinerary}"
+                <form class="col s12 m12 l12" action="#" th:action="@{/trip/} + ${trip.id} + @{/itinerary/update/} + ${itinerary.id}" th:object="${itinerary}"
                     method="post">
                     <div class="row">
                         
-                        <div class="input-field col s6">
+                        <div class="input-field col s12 m12 l12">
                             <input id="date" th:required="required" type="text" class="validate datepicker" th:field="*{date}">
                             <label for="date">Date</label>
                             <span class="errortext" th:if="${#fields.hasErrors('date')}" th:errors="*{date}"></span>
@@ -29,7 +29,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="input-field col s12">
+                        <div class="input-field col s12 m12 l12">
                             <textarea th:field="*{notes}" id="notes" class="materialize-textarea"></textarea>
                             <label for="notes">Notes</label>
                             <span class="errortext" th:if="${#fields.hasErrors('notes')}" th:errors="*{notes}"></span>
@@ -39,7 +39,7 @@
 					<input type="hidden" th:field="*{id}"/>
 
                     <div class="row">
-                        <div class="col s12">
+                        <div class="col s12 m12 l12">
                             <div class="input-field inline">
                                 <button class="btn waves-effect waves-light" type="submit" name="action">
                                     Update Itinerary
