--- a/src/main/resources/templates/edit-reservation.html
+++ b/src/main/resources/templates/edit-reservation.html
@@ -17,27 +17,27 @@
 
             <br><br>
             <div class="row">
-                <form class="col s12" action="#" th:action="@{/trip/} + ${trip.id} + @{/reservation/update/} + ${reservation.id}" th:object="${reservation}"
+                <form class="col s12 m10 l10" action="#" th:action="@{/trip/} + ${trip.id} + @{/reservation/update/} + ${reservation.id}" th:object="${reservation}"
                     method="post">
                     <div class="row">
-                        <div class="input-field col s6">
+                        <div class="input-field col s12 m6 l6">
                             <input id="title" type="text" class="validate" th:required="required" th:field="*{title}">
                             <label for="title">Title</label>
                             <span class="errortext" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
                         </div>
-                        <div class="input-field col s6">
+                        <div class="input-field col s12 m6 l6">
                             <input id="date" th:required="required" type="text" class="validate datepicker" th:field="*{date}">
                             <label for="date">Date</label>
                             <span class="errortext" th:if="${#fields.hasErrors('date')}" th:errors="*{date}"></span>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s6">
+                        <div class="input-field col s12 m6 l6">
                             <input id="confirmation" type="text" class="validate" th:field="*{confirmation}">
                             <label for="confirmation">Confirmation</label>
                             <span class="errortext" th:if="${#fields.hasErrors('confirmation')}" th:errors="*{confirmation}"></span>
                         </div>
-                        <div class="input-field col s6">
+                        <div class="input-field col s12 m6 l6">
                             <input id="price" type="number" step="0.01" class="validate" th:field="*{price}">
                             <label for="price">Price</label>
                             <span class="errortext" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
@@ -45,7 +45,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="input-field col s12">
+                        <div class="input-field col s12 m12 l12">
                             <textarea th:field="*{notes}" id="notes" class="materialize-textarea"></textarea>
                             <label for="notes">Notes</label>
                             <span class="errortext" th:if="${#fields.hasErrors('notes')}" th:errors="*{notes}"></span>
@@ -56,44 +56,44 @@
                     <!-- Address -->
                     <h4>Address</h4>
                     <div class="row">
-                        <div class="input-field col s2">
+                        <div class="input-field col s6 m3 l3">
                             <input id="civicNumber" type="number" class="validate" th:field="*{address.civicNumber}">
                             <label for="civicNumber">Civic Number</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.civicNumber')}" th:errors="*{address.civicNumber}"></span>
                         </div>
-                        <div class="input-field col s4">
+                        <div class="input-field col s6 m3 l3">
                             <input id="street" type="text" class="validate" th:field="*{address.street}">
                             <label for="street">Street</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.street')}" th:errors="*{address.street}"></span>
                         </div>
-                        <div class="input-field col s4">
+                        <div class="input-field col s6 m3 l3">
                             <input id="city" type="text" class="validate" th:field="*{address.city}">
                             <label for="city">City</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.city')}" th:errors="*{address.city}"></span>
                         </div>
-                        <div class="input-field col s2">
+                        <div class="input-field col s6 m3 l3">
                             <input id="province" type="text" class="validate" th:field="*{address.province}">
                             <label for="province">Province</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.province')}" th:errors="*{address.province}"></span>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s4">
+                        <div class="input-field col s6 m3 l3">
                             <input id="country" type="text" class="validate" th:field="*{address.country}">
                             <label for="country">Country</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.country')}" th:errors="*{address.country}"></span>
                         </div>
-                        <div class="input-field col s4">
+                        <div class="input-field col s6 m3 l3">
                             <input id="code" type="text" class="validate" th:field="*{address.code}">
                             <label for="code">Postal Code</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.code')}" th:errors="*{address.code}"></span>
                         </div>
-                        <div class="input-field col s2">
+                        <div class="input-field col s6 m3 l3">
                             <input id="latitude" type="number" step="0.000001" class="validate" th:field="*{address.latitude}">
                             <label for="latitude">Latitude</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.latitude')}" th:errors="*{address.latitude}"></span>
                         </div>
-                        <div class="input-field col s2">
+                        <div class="input-field col s6 m3 l3">
                             <input id="longitude" type="number" step="0.000001" class="validate" th:field="*{address.longitude}">
                             <label for="longitude">Longitude</label>
                             <span class="errortext" th:if="${#fields.hasErrors('address.longitude')}" th:errors="*{address.longitude}"></span>
@@ -103,7 +103,7 @@
 					<input type="hidden" th:field="*{id}"/>
 
                     <div class="row">
-                        <div class="col s12">
+                        <div class="col s12 m12 l12">
                             <div class="input-field inline">
                                 <button class="btn waves-effect waves-light" type="submit" name="action">
                                     Update Reservation
