--- a/src/main/resources/templates/edit-trip.html
+++ b/src/main/resources/templates/edit-trip.html
@@ -13,49 +13,47 @@
      
       <br><br>
       <div class="row">
-      <form class="col s12" action="#" th:action="@{/trip/} + ${trip.id} + @{/update}" th:object="${trip}" method="post">
+      <form class="col s12 m12 l12" action="#" th:action="@{/trip/} + ${trip.id} + @{/update}" th:object="${trip}" method="post">
       <div class="row">
-        <div class="input-field col s6">
+        <div class="input-field col s12 m6 l6">
           <input placeholder="Title" id="title" type="text" class="validate" th:required="required" th:field="*{title}">
           <label for="title">Title</label>
           <span class="errortext" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>  
         </div>
         
-        <div class="input-field col s12">
+        <div class="input-field col s12 m6 l6">
           <input placeholder="Destinations" id="destinations" type="text" th:required="required" class="validate" th:field="*{destinations}">
           <label for="destinations">Destinations</label>
           <span class="errortext" th:if="${#fields.hasErrors('destinations')}" th:errors="*{destinations}"></span>  
         </div>
         
-        <div class="input-field col s6">
+        <div class="input-field col s6 m6 l6">
           <input placeholder="Start Date" id="start" th:required="required" type="text" class="validate datepicker" th:field="*{start}">
           <label for="start">Start date</label>
           <span class="errortext" th:if="${#fields.hasErrors('start')}" th:errors="*{start}"></span>  
         </div>
 
-        <div class="input-field col s6">
+        <div class="input-field col s6 m6 l6">
           <input placeholder="End Date" id="end" type="text" th:required="required" class="validate datepicker" th:field="*{end}">
           <label for="end">End date</label>
           <span class="errortext" th:if="${#fields.hasErrors('end')}" th:errors="*{end}"></span>  
         </div>
       </div>
       <div class="row">
-        <div class="input-field col s12">
+        <div class="input-field col s12 m12 l12">
           <input id="description" type="text" class="validate" th:field="*{description}">
           <label for="description">Description</label>
           <span class="errortext" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span> 
         </div>
       </div>
       <div class="row">
-        <div class="input-field col s12">
-        <div class="row">
+        <div class="input-field col s12 m12 l12">
           <textarea th:field="*{notes}" id="notes" class="materialize-textarea" placeholder="Notes"></textarea>
           <label for="notes">Notes</label>
           <span class="errortext" th:if="${#fields.hasErrors('notes')}" th:errors="*{notes}"></span>
-        </div>
       </div>
       <div class="row">
-        <div class="col s12">
+        <div class="col s12 m12 l12">
           <div class="input-field inline">
             <button class="btn waves-effect waves-light" type="submit" name="action">Update Trip
               <i class="material-icons right">send</i>
