Fixed UI Issues from last commit. More UI tweaks.
fixed:
add accommodation
edit reservation
edit accommodation

Added links to Linkedin in the footer (and to github for Isaac). 
Made Footer responsive for medium sized screens as well.

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,23 +1,23 @@
    <footer class="page-footer orange">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
+        <div class="col l6 m6 s12">
           <h5 class="white-text">Company Bio</h5>
           <p class="grey-text text-lighten-4">GruntMeister 5000 is a team of five 3rd and 4th year students that are trying to build a nice travel planner.</p>
 
 
         </div>
-        <div class="col l3 s12">
+        <div class="col l3 m3 s12">
           <h5 class="white-text">Team</h5>
           <ul>
-            <li><a class="white-text" href="#!">Maryse Arseneau</a></li>
-            <li><a class="white-text" href="#!">Jennifer Firsoff</a></li>
-            <li><a class="white-text" href="#!">Shekhar Dewan</a></li>
-            <li><a class="white-text" href="#!">Joshua Cookson</a></li>
-            <li><a class="white-text" href="#!">Isaac Lee</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/maryse-arseneau-b542ba2b/">Maryse Arseneau</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/jennifer-firsoff-a7567594/">Jennifer Firsoff</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/shekhar-dewan-1223385a/">Shekhar Dewan</a></li>
+            <li><a class="white-text" href=https://www.linkedin.com/in/joshua-cookson-18681711b/>Joshua Cookson</a></li>
+            <li><a class="white-text" href="https://github.com/isaacjlee">Isaac Lee</a></li>
           </ul>
         </div>
-        <div class="col l3 s12">
+        <div class="col l3 m3 s12">
           <h5 class="white-text">email</h5>
           <ul>
             <li><a class="white-text" href="mailto:mgarseneau@mta.ca">mgarseneau@mta.ca</a></li>
