Reverted changes made to footer as we do not want our bios anywhere.

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -10,11 +10,11 @@
         <div class="col l3 m3 s12">
           <h5 class="white-text">Team</h5>
           <ul>
-            <li><a class="white-text" href="https://www.linkedin.com/in/maryse-arseneau-b542ba2b/">Maryse Arseneau</a></li>
-            <li><a class="white-text" href="https://www.linkedin.com/in/jennifer-firsoff-a7567594/">Jennifer Firsoff</a></li>
-            <li><a class="white-text" href="https://www.linkedin.com/in/shekhar-dewan-1223385a/">Shekhar Dewan</a></li>
-            <li><a class="white-text" href=https://www.linkedin.com/in/joshua-cookson-18681711b/>Joshua Cookson</a></li>
-            <li><a class="white-text" href="https://github.com/isaacjlee">Isaac Lee</a></li>
+            <li><a class="white-text" >Maryse Arseneau</a></li>
+            <li><a class="white-text" >Jennifer Firsoff</a></li>
+            <li><a class="white-text" >Shekhar Dewan</a></li>
+            <li><a class="white-text" >Joshua Cookson</a></li>
+            <li><a class="white-text" >Isaac Lee</a></li>
           </ul>
         </div>
         <div class="col l3 m3 s12">
