trip duplication error fix
-had to change title of edit trip page from being the title of the trip, or else it would change to the wrong title if bad title validation

--- a/src/main/resources/templates/edit-trip.html
+++ b/src/main/resources/templates/edit-trip.html
@@ -8,7 +8,7 @@
     <div class="container">
       <br><br>
       <div class="title">
-      <h1 class="header center orange-text" th:text="${trip.title}" ></h1>
+      <h1 class="header center orange-text">Edit Trip</h1>
       </div>
      
       <br><br>
