--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,14 +30,14 @@
           <form class="col s12" action="#" th:action="@{/login}" method="post" name="login" >
 
             <div class='row'>
-              <div class='input-field col s12'>
+              <div class='input-field col s12 m12 l12'>
                 <input class='validate' type='email' id='email' name="email" >
                 <label for='email'>Enter your email</label>
               </div>
             </div>
 
             <div class='row'>
-              <div class='input-field col s12'>
+              <div class='input-field col s12 m12 l12'>
                 <input class='validate' type='password' id='password' name="password" >
                 <label for='password'>Enter your password</label>
               </div>
@@ -47,7 +47,7 @@
             <br />
             <center>
               <div class='row'>
-                <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect indigo'>Login</button>
+                <button type='submit' name='btn_login' class='col s12 m12 l12 btn btn-large waves-effect indigo'>Login</button>
               </div>
               <div style="color: red" th:text="${error}"></div>
             </center>
