--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -44,7 +44,7 @@
 
             <div class="row">
 
-                <div class="col s12 m8 l6">
+                <div class="col s12 m6 l6 xl6">
                     <h4 class="header">
                     
                         <span data-target="modal1" class="btn-floating red"><i class="material-icons">perm_contact_calendar</i></span>
@@ -73,7 +73,7 @@
                     </ul>
                 </div>
 
-                <div class="col s12 m8 l6">
+                <div class="col s12 m6 l6 xl6">
                     <h4 class="header">
                         <span data-target="modal1" class="btn-floating green"><i class="material-icons">hotel</i></span>
                         Accommodations &nbsp
